resources/app-theme.css
/* latin */
@font-face {
    font-family: 'Averia Sans Libre';
    font-style: italic;
    font-weight: 400;
    src: local('Averia Sans Libre Italic'), local('AveriaSansLibre-Italic'), url(averiasanslibre.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

body, pre, code, div {
    margin: 0;
    padding: 0;
}

body {
    font-family: Segoe UI, sans-serif;
    background: #1d1f21;
    color: white;
}

::-webkit-scrollbar {
    height: 12px;
    width: 12px;
}

::-webkit-scrollbar-thumb {
    background: #555;
}

::-webkit-scrollbar-corner, ::-webkit-scrollbar {
    background: transparent;
}

.container-outer {
    position: absolute;
    display: flex;
    height: 100vh;
    width: 100vw;
    flex-direction: column;
}

.menu-bar, .file-pane, .dialog {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.menu-bar, .dialog title {
    display: block;
    height: 40px;
    background: #484;
    padding-left: 8px;
    line-height: 40px;
    font-size: 28px;
    font-family: 'Averia Sans Libre', cursive;
    font-style: italic;
    color: white;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.45);
    z-index: 10;
    text-shadow: 0 0 2px #333;
}

.iteration {
    display: inline-block;
    background:  linear-gradient(105deg,
        #484 0%,
        #484 10px,
        rgba(0, 0, 0, 0.35) 11px,
        #484 16px,
        #484 100%);
    padding: 0 8px 0 20px;
    cursor: pointer;
    box-sizing: border-box;
}

.iteration.new-iteration {
    padding-right: 12px;
}

.iteration.active {
    text-decoration: underline;
}

.container-inner {
    flex: 1;
    display: flex;
    flex-direction: row;
}

.file-pane {
    display: flex;
    flex-direction: column;
    width: 200px;
    overflow-x: hidden;
    color: white;
    font-weight: 400;
    font-size: 13px;
    margin-right: -5px;
    z-index: 2;
}
.file-pane > header,
.file-pane > footer,
.file-pane > content > .filler,
.file-pane > content li {
    background: linear-gradient(90deg,
        #444 0%,
        #444 calc(100% - 5px),
        #111 calc(100% - 5px),
        transparent 100%);
}

.file-pane > header {
    line-height: 40px;
    padding: 0 10px;
    font-size: 15px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.file-pane > content {
    overflow-y: auto;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
}

.file-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.file-list > li {
    padding: 4px 10px 5px 24px;
    cursor: pointer;
}

.file-list > li.selected {
    position: relative;
    margin-right: 5px;
    background:
        linear-gradient(180deg,
            #111 0,
            #1d1f21 5px,
            #1d1f21 calc(100% - 3px),
            #161616 100%);
}

.file-list > li.selected:after {
    content: " ";
    position: absolute;
    right: -5px;
    top: 0;
    width: 5px;
    height: 100%;
    background:
        radial-gradient(5px at top left,
            rgba(0, 0, 0, 0.35) 0%,
            transparent 5px),
        radial-gradient(ellipse 5px 3px at bottom left,
            rgba(0, 0, 0, 0.3) 0%,
            transparent 5px),
        linear-gradient(90deg,
            #1d1f21 0%,
            transparent 100%);
}

.file-list > li:before {
    font-family: "FontAwesome";
    display: inline-block;
    width: 16px;
    margin-left: -16px;
    box-sizing: border-box;
    font-size: 11px;
}

.file-list > li.added {
    color: #5c5;
}

.file-list > li.added:before {
    content: "\f067";
}

.file-list > li.removed {
    color: #e66;
}

.file-list > li.removed:before {
    content: "\f068";
}

.file-list > li.unchanged {
    color: #99f;
}

.file-list > li.unchanged:before {
    content: "=";
    font-family: inherit;
    font-size: 17px;
    line-height: 11px;
    font-weight: bold;
    width: 18px;
    margin-left: -18px;
}

.code-pane {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.code-pane > * {
    flex: 1;
    display: flex;
}

.code-pane > header {
    flex: 0 1 auto;
    height: 30px;
    margin-bottom: -4px;
    z-index: 2;
    background: linear-gradient(180deg, #444, #444 calc(100% - 4px), rgba(0, 0, 0, 0.5) calc(100% - 4px), transparent 100%);
}
.code-pane > header > button {
    background: #aaa;
    font-size: 16px;
    margin-bottom: 4px;
}
.code-pane > header > div {
    color: #ccc;
    line-height: 26px;
    font-size: 14px;
    padding: 0 8px;
    overflow: hidden;
    text-overflow: ellipsis;
}

code.code-block {
    flex: 1;
    position: relative;
    padding: 5px;
    line-height: 1.35em;
    background: transparent;
    overflow: auto;
}

code.lines {
    position: absolute;
    width: calc(100% - 10px);
    height: calc(100% - 10px);
}
code.lines.highlights {
    z-index: -1;
}
.code-line.added {
    background: rgba(0, 255, 0, 0.08);
}
.code-line.removed {
    background: rgba(255, 0, 0, 0.12);
}
.code-line.added.removed {
    background: repeating-linear-gradient(
        -45deg,
        rgba(255, 0, 0, 0.12),
        rgba(255, 0, 0, 0.12) 5px,
        rgba(0, 255, 0, 0.08) 5px,
        rgba(0, 255, 0, 0.08) 10px
    );
}
code.lines.diffs {
    z-index: 1;
    pointer-events: none;
}
code.lines.diffs .diff-start {
    border-top: 1px solid gray;
    margin-top: -1px;
}
code.lines.diffs .diff-side {
    border-left: 1px solid gray;
    margin-left: -1px;
    border-right: 1px solid gray;
    margin-right: -1px;
}
code.lines.diffs .diff-end {
    border-bottom: 1px solid gray;
    margin-bottom: -1px;
}

.diff-added {
    background: #040;
    border-bottom: 1px solid #040;
    outline: 1px solid #007700;
    outline-offset: -1px;
}

.diff-removed {
    background: #400;
    border-bottom: 1px solid #400;
    outline: 1px solid #770000;
    outline-offset: -1px;
}

.hljs::selection,
.hljs span::selection {
    background: #06a;
}

comment {
    position: absolute;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    background: #333;
    box-shadow: 0 1px 8px black;
    pointer-events: auto;
    border-top: 1px solid transparent;
    outline: 1px solid #555;
}

comment > code.hljs {
    background: none;
    padding: 0;
    padding-bottom: 2px;
}

comment > note {
    display: block;
    background: #444;
    border: 0;
    border-top: 1px solid #555;
    resize: none;
    color: #bbb;
    font-family: 'Segoe UI', sans-serif;
    font-size: 12px;
    padding: 2px 4px 3px 4px;
}




label {
    font-size: 18px;
    line-height: 30px;
    margin-top: 6px;
}

.dialog {
    z-index: 20;
    position: absolute;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
}

.dialog > * {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.dialog title {
    z-index: 21;
}

.dialog content {
    display: block;
    flex: 1;
    background: #444;
    color: #ddd;
}

.dialog footer {
    background: #666;
    display: flex;
    color: #222;
    height: 40px;
    text-align: right;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.45);
}
.dialog footer button {
    font-size: 20px;
    padding: 5px 10px;
}

.file-pane footer {
    display: flex;
    padding-right: 5px;
}

.file-pane footer > button {
    flex: 1 1 auto;
    font-size: 14px;
    font-family: Segoe UI, sans-serif;
    font-weight: normal;
    font-style: normal;
    background: #666;
    color: #bbb;
}

.file-pane footer > button.selected {
    background: #484;
    color: #ddd;
}

.row-group, .toolbar {
    display: flex;
}

.toolbar, .toolbar label {
    font-size: 14px;
    line-height: 30px;
}

.row-group > button {
    padding: 0 10px;
    font-size: 22px;
    background: #484;
    color: white;
}

.filler {
    flex: 1;
}

.error {
    color: #f54;
}

button {
    cursor: pointer;
    font-family: 'Averia Sans Libre', cursive;
    font-style: italic;
    font-size: 20px;
    font-weight: 500;
    background: #bbb;
    border: 0;
}

button.save {
    background: #484;
    color: white;
}

button.disabled {
    background: #999;
    opacity: 0.5;
    pointer-events: none;
    color: black;
}

select {
    background: #888;
    border: none;
    color: black;
    font-family: inherit;
    font-size: 14px;
    height: 30px;
    cursor: pointer;
}

#import-dialog content {
    display: flex;
}

#import-dialog content.import-status {
    padding: 5px 10px;
    flex-direction: column;
    overflow: auto;
}

#change-container, #change-container > * {
    display: flex;
    flex-direction: column;
}

.dropdown-anchor {
    position: relative;
}

#reviewer-container {
    margin-bottom: 6px;
    -webkit-column-count: 2;
    column-count: 2;
}

#reviewer-container > *, #change-container {
    font-size: 14px;
}

.email > span {
    line-height: 20px;
}

.email > .fa {
    display: inline-block;
    color: #c00;
    padding: 0 8px;
    cursor: pointer;
}

.email-suggestions {
    position: absolute;
    left: 0;
    top: 0;
    background: #666;
    box-shadow: 0 1px 6px black;
}

.email-suggestions > div {
    padding: 2px 6px;
    cursor: pointer;
}

.email-suggestions > div:hover, .email-suggestions > div.focus {
    background: #484;
}

#change-container {
    margin-top: 1px;
}

#change-container .content {
    overflow: auto;
    box-sizing: border-box;
    padding: 4px 0;
}

.tree, .tree-node {
    white-space: nowrap;
    list-style-type: none;
}

.tree {
    padding: 0 20px;
    margin: 0;
}

.tree-node {
    list-style-type: none;
}

.tree-node > span {
    display: inline-block;
    cursor: pointer;
    padding: 0 4px;
    margin-right: 10px;
    margin-bottom: -2px;
    box-sizing: border-box;
    border: 2px solid transparent;
}

.tree-node > span:before {
    font-family: "FontAwesome";
    content: "\f0f6";
    display: inline-block;
    width: 28px;
    padding-left: 6px;
    margin-left: -28px;
    box-sizing: border-box;
}

.tree-node.selected > span:before {
    content: "\f00c";
    color: #6a6;
}

.tree-node.selected > span {
    background: #484;
    border: 2px solid #484
}

.tree-node.partial-select > span {
    border: 2px solid #484
}

.tree-node.children > span:before {
    content: "\f054";
    color: inherit;
}

.tree-node.children.expanded > span:before {
    content: "\f078";
    color: inherit;
}

.column {
    display: flex;
    flex-direction: column;
}

.import-content > .column {
    flex: 1;
    padding: 10px;
}

.column input, .column textarea {
    resize: none;
    background: #1d1f21;
    border: 0;
    box-shadow: inset 0 1px 6px black;
    color: #eee;
    font-family: Segoe UI, sans-serif;
    font-size: 16px;
    padding: 5px 8px;
}

